fix(checkbox): Alignment fix to center in all tables

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -70,8 +70,7 @@
 
   // Overrrides
   .#{$prefix}--checkbox-label {
-    margin-top: rem(-8px);
-    padding-left: rem(22px);
+    padding-left: rem(28px);
   }
 
   .#{$prefix}--overflow-menu {
